--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./assets/css/index.css">
     <script src="./js/index.js" defer></script>
+    <script src="./js/index.min.js" defer></script>
     <title>YourWaifu</title>
 </head>
 <body>
